# PDF-Summarizer

./: .gitignore  Cargo.toml  README.md  install.sh
src/: main.rs
src/cli/: mod.rs
src/error/: mod.rs
src/llm/: attention.rs  config.rs  layers.rs  loader.rs  mod.rs  model.rs
src/model_manager/: cache.rs  downloader.rs  mod.rs  validator.rs
src/output/: mod.rs
src/pdf/: mod.rs
src/pipeline/: mod.rs
src/tokenizer/: mod.rs
